[gd_scene load_steps=2 format=3 uid="uid://b0ekxxogjmxvh"]

[ext_resource type="Script" path="res://Game/player/player.gd" id="1_3780m"]

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_3780m")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.279261)
near = 0.001
far = 5000.0

[node name="OmniLight3D" type="OmniLight3D" parent="."]

[node name="SpotLight3D" type="SpotLight3D" parent="."]

[node name="Ray_front" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -0.6, 0)

[node name="Ray_back" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0)
visible = false

[node name="Ray_left" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false

[node name="Ray_right" type="RayCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, -4.37114e-08, 0, -4.37114e-08, 1, -1, 4.37114e-08, 1.91069e-15, 0, 0, 0)
visible = false
